--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- navbar -->
       <ul class="social-icons">
         <li class="social-icon-item">
           <a href="#" class="social-icon-link"
@@ -63,6 +64,140 @@
           </li>
         </ul>
       </nav>
+
+      <div class="search">
+        <form class="search-form">
+          <input type="text" class="search-input" placeholder="Search" /><button
+            class="search-btn"
+          >
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+      </div>
+
+      <nav class="second-nav">
+        <ul class="second-nav-list">
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Furniture</a>
+
+            <div class="dropdown">
+              <ul class="dropdown-first-list">
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Sofas</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Sectionals</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Daybeds & Chaises</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link"
+                    >Consolas & Credenzas</a
+                  >
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Chairs</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Benches & Ottomans</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Dressers & Chests</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Dining Tables</a>
+                </li>
+              </ul>
+              <ul class="dropdown-second-list">
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Lampert</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Baxter</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Channing</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Maxime</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Talitha</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Rider</a>
+                </li>
+                <li class="dropdown-list-item">
+                  <a href="#" class="dropdown-list-link">Goldfinger</a>
+                </li>
+              </ul>
+              <img src="images/dropdown-image.jpg" class="dropdown-image" />
+            </div>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Rooms</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Kitchen</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Outdoor</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Lighting</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Bed & Bath</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Window</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- end of navbar -->
+
+      <!-- banner -->
+      <section class="banner">
+        <div class="banner-content">
+          <h1 class="banner-heading">Great Sale</h1>
+          <button class="banner-btn">
+            <span class="banner-btn-text-one">Shop Now</span>
+            <span class="banner-btn-text-two">It's Interesting</span>
+          </button>
+        </div>
+
+        <div class="slideshow">
+          <button class="slide-btn slide-btn-1"></button>
+          <button class="slide-btn slide-btn-2"></button>
+          <button class="slide-btn slide-btn-3"></button>
+          <button class="slide-btn slide-btn-4"></button>
+          <div class="slideshow-wrapper">
+            <div class="slide">
+              <img src="images/slide-img-1.jpg" />
+            </div>
+            <div class="slide">
+              <img src="images/slide-img-2.jpg" />
+            </div>
+            <div class="slide">
+              <img src="images/slide-img-3.jpg" />
+            </div>
+            <div class="slide">
+              <img src="images/slide-img-4.jpg" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end of banner -->
+      <!-- day offer -->
+      <section class="day-offer">
+        <img src="images/day-offer-img-one.jpg" class="day-offer-img-one" />
+        <h1 class="day-offer-heading">Day Offer</h1>
+        <p class="day-offer-paragraph">Feel better with new furniture</p>
+        <button class="day-offer-btn">Shop Now</button>
+        <img src="images/day-offer-img-two.jpg" class="day-offer-img-two" />
+      </section>
+      <!-- end of day offer -->
     </div>
   </body>
 </html>
